--- a/apps/game-of-life/index.html
+++ b/apps/game-of-life/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Conway's Game of Life</h1>
     <canvas id="canvas" width="800" height="600" style="border:1px solid #000000;"></canvas>
+    <input type="range" min="100" max="1000" value="500" class="slider" id="speed">
     <p>Created by Harry Chew &copy; 2022</p>
     <script type="text/javascript" src="js/canvas.js"></script>
   </body>
