--- a/apps/convert/index.html
+++ b/apps/convert/index.html
@@ -6,26 +6,29 @@
     <title>Convert</title>
   </head>
   <body>
-
     <div class="header">
       <h1>Conversion App</h1>
     </div>
-
     <div class="converter">
       <h2>Temperature</h2>
       <div class="converter-content">
         <label for="celsius">Celsius:</label><input id="temp-c" type="number" name="celsius" value=""><label for="fahrenheit">Fahrenheit:</label><input id="temp-f" type="number" name="fahrenheit" value="">
       </div>
     </div>
-
     <div class="converter">
       <h2>Distance</h2>
       <div class="converter-content">
         <label for="miles">Miles:</label><input id="dist-m" type="number" name="miles" value=""><label for="kilometer">Kilometers:</label><input id="dist-k" type="number" name="kilometer" value="">
       </div>
     </div>
-    
+    <div class="converter">
+      <h2>Weight</h2>
+      <div class="converter-content">
+        <label for="lbs">Pounds:</label><input id="weight-lbs" type="number" name="lbs" value=""><label for="kg">Kilograms:</label><input id="weight-kg" type="number" name="kg" value="">
+      </div>
+    </div>
     <script type="text/javascript" src="js/temperature.js"></script>
     <script type="text/javascript" src="js/distance.js"></script>
+    <script type="text/javascript" src="js/weight.js"></script>
   </body>
 </html>
