--- a/apps/chuck/index.html
+++ b/apps/chuck/index.html
@@ -6,17 +6,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Chuck Norris Joke</title>
   </head>
   <body>
     <div class="page-wrapper">
+      
       <h1 class="title">Random Chuck Norris Jokes</h1>
       <div class="content-wrapper">
 
         <div class="top">
 
           <p>Hit the button to get a joke.</p>
-          <button id="button" class="m-10" type="button" name="button" onclick="getNewJoke()">Get New Joke</button>
+          <div class="buttons">
+            <button id="button" class="m-10" type="button" name="button" onclick="getNewJoke()">Get New Joke</button>
+            <button id="save" class="save-joke" type="submit"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
+          </div>
         </div>
         <div class="bottom">
           <p id="joke">Joke will go here....</p>
@@ -28,5 +33,6 @@
 
 
   <script type="text/javascript" src="js/getjoke.js"></script>
+  <script type="text/javascript" src="js/savejoke.js"></script>
   </body>
 </html>
